small audio fix, cards z-index fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -106,7 +106,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 500;
 }
 .game_replay_overlay {
   position: absolute;
@@ -224,11 +224,13 @@ body {
   gap: 18rem;
   height: 30vh;
   transition: 0.3s ease-in-out;
+  z-index: 10;
 }
 .game_cards_tucked {
   transform: translateY(90%);
   scale: 60%;
   gap: 10rem;
+  pointer-events: none;
 }
 .game_card {
   padding: 4rem;
@@ -266,4 +268,5 @@ body {
 /* Class Hidden */
 .hidden {
   display: none;
+  pointer-events: none;
 }
